--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "rtail",
   "version": "0.0.2",
-  "description": "stupid simple remote tail for logs",
+  "description": "Tail everything in the browser in seconds",
   "keywords": [
     "tail",
     "log",
     "logs",
-    "remote"
+    "remote",
+    "logio"
   ],
-  "main": "client.js",
+  "main": "./lib/client.js",
   "bin": {
-    "rtail": "./client.js",
-    "rtail-server": "./server.js"
+    "rtail": "./lib/client.js",
+    "rtail-server": "./lib/server.js"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:kilianc/rtail.git"
   },
   "dependencies": {
+    "debug": "^2.1.0",
     "express": "^4.10.0",
     "node-uuid": "^1.4.1",
+    "request": "^2.47.0",
     "socket.io": "^1.1.0",
     "yargs": "^1.3.2"
   },
