--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-uuid": "^1.4.1",
     "request": "^2.47.0",
     "socket.io": "^1.1.0",
+    "update-notifier": "^0.2.2",
     "yargs": "^1.3.2"
   },
   "devDependencies": {
