--- a/package.json
+++ b/package.json
@@ -21,16 +21,32 @@
   "dependencies": {
     "debug": "^2.1.0",
     "express": "^4.10.0",
-    "node-uuid": "^1.4.1",
+    "json5": "^0.4.0",
+    "moniker": "^0.1.2",
     "request": "^2.47.0",
     "socket.io": "^1.1.0",
     "split": "^0.3.3",
+    "strip-ansi": "^2.0.1",
+    "through2-map": "^1.4.0",
     "update-notifier": "^0.2.2",
     "yargs": "^1.3.2"
   },
   "devDependencies": {
-    "chai": "^1.9.2",
-    "mocha": "^2.0.1"
+    "angular": "^1.3.15",
+    "angular-moment": "^0.10.1",
+    "autoprefixer-core": "^5.1.11",
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-postcss": "^5.1.6",
+    "gulp-sass": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-util": "^3.0.4",
+    "jquery": "^2.1.4",
+    "moment": "^2.10.3",
+    "node-sass": "^3.1.1",
+    "run-sequence": "^1.1.0"
   },
   "scripts": {
     "test": "mocha test.js -reporter spec",
