--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "angular": "^1.3.15",
     "angular-moment": "^0.10.1",
+    "ansi_up": "^1.2.1",
     "autoprefixer-core": "^5.1.11",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
