--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
   },
   "devDependencies": {
     "angular": "^1.3.15",
+    "angular-animate": "^1.4.0",
+    "angular-localforage": "^1.2.2",
     "angular-moment": "^0.10.1",
+    "angular-rt-popup": "^1.0.5",
     "ansi_up": "^1.2.1",
     "autoprefixer-core": "^5.1.11",
     "del": "^1.1.1",
+    "highlight.js": "isagalaev/highlight.js",
     "gulp": "^3.8.11",
     "gulp-ejs": "^1.1.0",
     "gulp-livereload": "^3.8.0",
@@ -50,6 +54,7 @@
     "gulp-useref": "^1.1.2",
     "gulp-util": "^3.0.4",
     "jquery": "^2.1.4",
+    "localforage": "^1.2.2",
     "moment": "^2.10.3",
     "node-sass": "^3.1.1",
     "run-sequence": "^1.1.0"
