--- a/wercker.yml
+++ b/wercker.yml
@@ -9,8 +9,8 @@ build:
 deploy:
   steps:
     - script:
-        code: |
-            export VERSION=`node -e "console.log(require('./package.json').version)"`
+        name: set $VERSION
+        code: source scripts/set-version.sh
     - s3sync:
         key_id: $AWS_ACCESS_KEY_ID
         key_secret: $AWS_SECRET_ACCESS_KEY
@@ -18,23 +18,4 @@ deploy:
         source_dir: dist/
     - script:
         name: npm publish
-        code: |
-          if [ ! -n "$NPM_PUBLISH" ]; then
-            echo "Skipping npm publish, NPM_PUBLISH is not set."
-            exit 0
-          fi
-
-          if [ ! -n "$NPM_TOKEN" ]; then
-            error "Please set NPM_TOKEN env variable"
-            exit 1
-          fi
-
-          if [ ! -n "$NPM_EMAIL" ]; then
-            error "Please set NPM_EMAIL env variable"
-            exit 1
-          fi
-
-          echo "_auth = $NPM_TOKEN > ~/.npmrc"
-          echo "email = $NPM_EMAIL >> ~/.npmrc"
-
-          npm publish
+        code: scripts/npm-publish.sh
