--- a/package.json
+++ b/package.json
@@ -8,24 +8,22 @@
   },
   "devDependencies": {
     "autoprefixer-core": "^5.2.0",
-    "del": "^1.1.1",
-    "express": "^4.10.0",
-    "gulp": "^3.8.11",
+    "del": "^1.2.0",
+    "express": "^4.12.4",
+    "gulp": "^3.9.0",
     "gulp-ejs": "^1.1.0",
     "gulp-livereload": "^3.8.0",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.1.1",
-    "gulp-minify-html": "^1.0.2",
-    "gulp-postcss": "^5.1.6",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-minify-css": "^1.1.6",
+    "gulp-minify-html": "^1.0.3",
+    "gulp-postcss": "^5.1.8",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "gulp-useref": "^1.1.2",
-    "gulp-util": "^3.0.4",
-    "highlight.js": "isagalaev/highlight.js",
+    "gulp-useref": "^1.2.0",
+    "gulp-util": "^3.0.5",
     "jquery": "^2.1.4",
-    "node-sass": "^3.1.1",
-    "run-sequence": "^1.1.0",
+    "run-sequence": "^1.1.1",
     "zeroclipboard": "^2.2.0"
   },
   "scripts": {
