--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "git@github.com:kilianc/rtail.git"
   },
   "dependencies": {
+    "chrono-node": "^1.0.6",
     "debug": "^2.1.0",
     "express": "^4.10.0",
     "json5": "^0.4.0",
