--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rtail",
   "version": "0.1.1",
-  "description": "Pipe your terminal output to the browser in seconds, using UNIX pipes.",
+  "description": "Terminal output to the browser in seconds, using UNIX pipes.",
   "keywords": [
     "tail",
     "log",
