--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
     "node-sass": "^3.1.1",
+    "request": "^2.58.0",
     "run-sequence": "^1.1.0"
   },
   "scripts": {
