--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.2.1",
   "description": "Terminal output to the browser in seconds, using UNIX pipes.",
   "keywords": [
-    "tail",
     "log",
-    "logs",
-    "logio",
     "logging",
+    "logio",
+    "logs",
+    "tail",
     "udp"
   ],
   "bin": {
@@ -35,6 +35,7 @@
   "devDependencies": {
     "angular": "^1.3.15",
     "angular-animate": "^1.4.0",
+    "angular-hotkeys": "^1.4.5",
     "angular-localforage": "^1.2.2",
     "angular-moment": "^0.10.1",
     "angular-rt-popup": "^1.0.5",
