--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "scripts": {
     "test": "echo OK",
-    "deploy-dev": "git push -f dokku/dev website:master",
-    "deploy-prod": "git push -f dokku/prod website:master"
+    "deploy-dev": "git push -f dokku/dev HEAD:master",
+    "deploy-prod": "git push -f dokku/prod HEAD:master"
   },
   "author": "Kilian Ciuffolo <me@nailik.org>",
   "license": "MIT"
