--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "devDependencies": {
     "animate.css": "^3.2.5",
-    "autoprefixer-core": "^5.2.1",
-    "del": "^1.2.0",
+    "autoprefixer": "^6.0.3",
+    "autoprefixer-core": "^6.0.1",
+    "del": "^2.0.2",
     "express": "^4.13.0",
     "gulp": "^3.9.0",
     "gulp-ejs": "^1.1.0",
@@ -17,7 +18,7 @@
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.2.0",
     "gulp-minify-html": "^1.0.3",
-    "gulp-postcss": "^5.1.9",
+    "gulp-postcss": "^6.0.1",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
