--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rtail-website",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "rTail website",
   "repository": {
     "type": "git",
@@ -15,24 +15,25 @@
     "gulp": "^3.9.0",
     "gulp-ejs": "^1.1.0",
     "gulp-livereload": "^3.8.0",
-    "gulp-load-plugins": "^0.10.0",
+    "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "^1.2.0",
     "gulp-minify-html": "^1.0.3",
     "gulp-postcss": "^6.0.1",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "gulp-useref": "^1.2.0",
+    "gulp-useref": "^3.0.3",
     "gulp-util": "^3.0.6",
     "jquery": "^2.1.4",
+    "node-neat": "^1.7.2",
     "request": "^2.58.0",
     "run-sequence": "^1.1.1",
     "zeroclipboard": "^2.2.0"
   },
   "scripts": {
     "test": "echo OK",
-    "deploy-dev": "git push -f dokku/dev HEAD:master",
-    "deploy-prod": "git push -f dokku/prod HEAD:master"
+    "deploy-dev": "git push -f dokku@lukibear.com:dev.rtail.org HEAD:master",
+    "deploy-prod": "git push -f dokku@lukibear.com:rtail.org HEAD:master"
   },
   "author": "Kilian Ciuffolo <me@nailik.org>",
   "license": "MIT"
