--- a/package.json
+++ b/package.json
@@ -42,34 +42,29 @@
     "ansi_up": "^1.2.1",
     "autoprefixer-core": "^5.1.11",
     "chai": "^3.0.0",
+    "css-loader": "^0.28.7",
     "del": "^1.1.1",
-    "gulp": "^3.9.0",
-    "gulp-ejs": "^1.1.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.1.1",
-    "gulp-minify-html": "^1.0.2",
-    "gulp-ng-annotate": "^1.0.0",
-    "gulp-postcss": "^5.1.6",
-    "gulp-sass": "^2.0.1",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-useref": "^1.1.2",
-    "gulp-util": "^3.0.4",
-    "highlight.js": "isagalaev/highlight.js",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "highlight.js": "github:isagalaev/highlight.js",
+    "html-webpack-plugin": "^2.30.1",
     "istanbul": "^0.3.17",
     "istanbul-harmony": "^0.3.16",
     "jquery": "^2.1.4",
     "localforage": "^1.2.2",
     "mocha": "^2.2.5",
     "moment": "^2.10.3",
-    "node-sass": "^3.1.1",
-    "run-sequence": "^1.1.0"
+    "node-sass": "^4.5.3",
+    "run-sequence": "^1.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1"
   },
   "scripts": {
     "app": "DEBUG=rtail:*,api:* gulp app",
-    "test": "NODE_ENV=test node --harmony test/runner.js",
-    "test:watch": "NODE_ENV=test nodemon --harmony test/runner.js"
+    "test": "NODE_ENV=test node test/runner.js",
+    "test:watch": "NODE_ENV=test nodemon test/runner.js"
   },
   "author": "Kilian Ciuffolo <me@nailik.org>",
   "license": "MIT"
