--- a/package.json
+++ b/package.json
@@ -10,52 +10,54 @@
     "logging",
     "udp"
   ],
-  "bin": {
-    "rtail": "./cli/rtail-client.js",
-    "rtail-server": "./cli/rtail-server.js"
-  },
+  "author": "Artem Kuzmenko <witem.artem@gmail.com>",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git@github.com:witem/rtail.git"
   },
+  "bugs": {
+    "url": "https://github.com/witem/rtail/issues"
+  },
+  "engines": {
+    "node": ">=4"
+  },
+  "bin": {
+    "rtail": "./cli/rtail-client.js",
+    "rtail-server": "./cli/rtail-server.js"
+  },
   "dependencies": {
     "chrono-node": "^1.0.6",
-    "debug": "^2.1.0",
+    "debug": "^3.1.0",
     "express": "^4.10.0",
-    "json5": "^0.4.0",
+    "json5": "^0.5.1",
     "moniker": "^0.1.2",
     "request": "^2.58.0",
-    "socket.io": "^1.1.0",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "split": "^1.0.0",
-    "strip-ansi": "^3.0.0",
-    "through2-map": "^2.0.0",
-    "update-notifier": "^0.5.0",
-    "yargs": "^3.14.0"
+    "strip-ansi": "^4.0.0",
+    "through2-map": "^3.0.0",
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
     "angular": "^1.3.15",
     "angular-animate": "^1.4.0",
     "angular-localforage": "^1.2.2",
-    "angular-moment": "^0.10.1",
+    "angular-moment": "^1.1.0",
     "angular-rt-popup": "^1.0.5",
-    "angular-ui-router": "^0.3.2",
-    "ansi_up": "^1.2.1",
-    "chai": "^3.0.0",
+    "angular-ui-router": "^0.4.3",
+    "ansi_up": "^2.0.2",
+    "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
-    "del": "^1.1.1",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^2.30.1",
-    "istanbul": "^0.3.17",
-    "jquery": "^2.1.4",
-    "localforage": "^1.2.2",
-    "mocha": "^2.2.5",
-    "moment": "^2.10.3",
+    "jquery": "^3.2.1",
+    "mocha": "^4.0.1",
     "node-sass": "^4.6.0",
-    "run-sequence": "^1.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
@@ -67,7 +69,5 @@
     "build:watch": "./node_modules/.bin/webpack --watch",
     "test": "NODE_ENV=test node test/runner.js",
     "test:watch": "NODE_ENV=test nodemon test/runner.js"
-  },
-  "author": "Artem Kuzmenko <witem.artem@gmail.com>",
-  "license": "MIT"
+  }
 }
