--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "build": "./node_modules/.bin/webpack",
     "build:watch": "./node_modules/.bin/webpack --watch",
     "lint": "./node_modules/.bin/eslint .",
-    "prepublishOnly": "npm run lint && NODE_ENV=production npm run build",
-    "test": "NODE_ENV=test node test/runner.js",
-    "test:watch": "NODE_ENV=test nodemon test/runner.js"
+    "prepublishOnly": "npm run lint && npm test && NODE_ENV=production npm run build",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   }
 }
