--- a/package.json
+++ b/package.json
@@ -41,34 +41,46 @@
     "yargs": "^10.0.3"
   },
   "devDependencies": {
-    "angular": "^1.3.15",
-    "angular-animate": "^1.4.0",
-    "angular-localforage": "^1.2.2",
-    "angular-moment": "^1.1.0",
-    "angular-rt-popup": "^1.0.5",
-    "angular-ui-router": "^0.4.3",
+    "animate.css": "^3.5.2",
     "ansi_up": "^2.0.2",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "chai": "^4.1.2",
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.2.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "font-awesome": "^4.7.0",
+    "html-webpack-plugin": "^2.16.0",
     "mocha": "^4.0.1",
-    "node-sass": "^4.6.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
-    "webpack": "^3.8.1"
+    "ratchet-npm": "^2.0.4",
+    "style-loader": "^0.18.2",
+    "vue": "^2.2.6",
+    "vue-loader": "^12.2.1",
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-progressbar": "^0.7.1",
+    "vue-router": "^2.3.1",
+    "vue-socket.io": "^2.1.1-b",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.2.6",
+    "vuex": "^2.0.0",
+    "webpack": "3.0.0",
+    "webpack-dev-server": "^2.4.2"
   },
   "scripts": {
     "start": "DEBUG=rtail:*,api:* ./cli/rtail-server.js",
-    "build": "./node_modules/.bin/webpack",
-    "build:watch": "./node_modules/.bin/webpack --watch",
+    "clean": "rm -rf dist",
+    "dev": "npm run clean && webpack-dev-server -d --open --progress",
+    "build": "npm run clean && NODE_ENV=production webpack -p --hide-modules --progress",
     "lint": "./node_modules/.bin/eslint .",
-    "prepublishOnly": "npm run lint && npm test && NODE_ENV=production npm run build",
+    "prepublishOnly": "npm run lint && npm test && npm run build",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   }
 }
