--- a/package.json
+++ b/package.json
@@ -38,16 +38,20 @@
     "split": "^1.0.0",
     "strip-ansi": "^4.0.0",
     "through2-map": "^3.0.0",
+    "vue-hljs": "^1.0.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
+    "@vue/cli-service": "^3.0.0-beta.14",
     "animate.css": "^3.5.2",
     "ansi_up": "^2.0.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "chai": "^4.1.2",
     "copy-webpack-plugin": "^4.0.1",
@@ -55,7 +59,9 @@
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-vue": "^4.5.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "fecha": "^2.3.3",
     "file-loader": "^0.11.1",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.16.0",
@@ -79,7 +85,7 @@
     "clean": "rm -rf dist",
     "dev": "npm run clean && webpack-dev-server -d --open --progress",
     "build": "npm run clean && NODE_ENV=production webpack -p --hide-modules --progress",
-    "lint": "./node_modules/.bin/eslint .",
+    "lint": "./node_modules/.bin/eslint . --ext js,vue",
     "prepublishOnly": "npm run lint && npm test && npm run build",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   }
