--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.2.6",
     "vuex": "^2.0.0",
+    "vuex-persistedstate": "^2.5.4",
     "webpack": "3.0.0",
     "webpack-dev-server": "^2.4.2"
   },
