--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "split": "^1.0.0",
     "strip-ansi": "^4.0.0",
     "through2-map": "^3.0.0",
-    "vue-hljs": "^1.0.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
@@ -64,11 +63,13 @@
     "fecha": "^2.3.3",
     "file-loader": "^0.11.1",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^2.16.0",
     "mocha": "^4.0.1",
     "ratchet-npm": "^2.0.4",
     "style-loader": "^0.18.2",
     "vue": "^2.2.6",
+    "vue-highlightjs": "^1.3.3",
     "vue-loader": "^12.2.1",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-progressbar": "^0.7.1",
